# ArticleWriter-v2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_PLAN.md  OVERVIEW.md  README.md  alembic.ini  article_writer.py  debug_icy.py  docker-compose.yml  nginx.frontend.conf  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run_article_writer.py  searchandscrape.py  server.py  state.json  stream_report_425615b3.md  stream_report_7ad85a78.md  stream_report_bbd6b381.md  stream_report_be918ec3.md  stream_report_ee86a2a4.md  test_stream.py  v1_compat.py
.github/workflows/: deploy.yml  docker-image.yml
agents/_base/: config.py  debug_log.py  messaging.py  prompt_renderer.py  resilient.py  run_context.py  simple_agent.py  types.py
agents/adaptive_search/: agent.py
agents/discovery/: __init__.py
agents/extraction/: agent.py
agents/followup/: agent.py
agents/instructions/: agent.py
agents/media_extraction/: agent.py
agents/media_search/: agent.py
agents/parsing/: agent.py
agents/pipeline/: _adaptive_search.py  _helpers.py  _persistence.py  runner.py
agents/reflection/: agent.py
agents/scraping/: agent.py
agents/search/: agent.py
agents/stream_analysis/: agent.py  config.py
agents/stream_digest/: agent.py  config.py
agents/usage_tracking/: agent.py
agents/writer/: agent.py
app/: article_writer copy.py  article_writer.py  example_articles.py  llm_models.py  log_config.py  prompts.py  resilient_agent.py  run_article_writer.py  searchandscrape.py  server.py
backend/: config.py  database.py  domain.py  main.py  secrets.py  settings.py
backend/api/: schemas.py  streams.py  v2.py
backend/auth/: deps.py  kinde.py  protocols.py
backend/db/: models.py  orgconfig_defaults.py  utils.py
backend/integrations/: kinde_mgmt.py
backend/repositories/: __init__.py  discovery.py  null.py  postgres.py  protocols.py
backend/scripts/: bootstrap_local_dev.py  seed_local_dev_org.py  seed_styl_fm_config.py  set_org_domain.py
backend/services/: metrics.py  org_sync.py  stream_manager.py  stream_pipeline.py
docs/: DOMAINS.md  image-creator-deploy-checklist.md
docs/styl_fm/: description.txt  example_articles.txt  guidelines.md  html_format.html
domains/: registry.py
domains/_base/: config.py
domains/styl_fm/: config.py  examples.py  guidelines.md  reflection_stance.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: logo-preview.html
frontend/src/: App.css  App.tsx  main.tsx  types.ts
k8s/: backend-deploy.yaml  configmap.yaml  frontend-deploy.yaml  ingress.yaml  namespace.yaml  postgres-deploy.yaml  postgres-pvc.yaml  secret.yaml.example  stale-articles-cron.yaml
migrations/: env.py
migrations/versions/: 08d612a102af_create_core_schema.py  0f95e46c36cd_baseline_empty.py  12b602ab7ab5_add_orgconfig_example_titles.py  5b61506953ef_add_reflection_rounds_to_org_configs.py  a1b2c3d4e5f6_add_article_inputs.py  a1b2c3d4e5f6_add_topic_transitions_to_stream_chunks.py  a2b3c4d5e6f7_add_article_templates_to_org_configs.py  a3989b3817e8_add_article_marked_done_author_email.py  a9b0c1d2e3f4_add_image_creator_fields.py  ab2c3d4e5f6a_add_topic_transitions_to_stream_chunks.py  b0c1d2e3f4a5_add_image_creator_enable_fields.py  b2c3d4e5f6a7_facts_quotes_multi_source.py  b3c4d5e6f7a8_add_facebook_teasers_to_articles.py  b5c6d7e8f9a0_add_agent_models_to_org_configs.py  c1d2e3f4a5b6_add_webhook_fields.py  c1e8f2a3b4d5_add_article_marked_done_by_name.py  c3d4e5f6a7b8_add_discovery_tables.py  c4d5e6f7a8b9_add_social_media_attachments_to_articles.py  c8d9e0f1a2b3_add_stream_topic_discovery_fields.py  d2f3e4a5b6c7_add_embed_competitor_source_url.py  d4e5f6a7b8c9_add_discovery_fields_to_org_configs.py  d4e5f6a7b8c9_add_source_whitelist_blacklist.py  d5e6f7a8b9c0_add_stream_topics.py  d64d1189c097_add_author_name_to_articles.py  (+10 more)
scripts/: dev-prod-db.ps1
tests/: conftest.py  test_agent_configs.py  test_app_settings.py  test_domain_config.py  test_schemas.py  test_types.py  test_v1_compat.py
tests/backend/: test_auth.py  (+15 more)
(+184 files in other folders)
