[project]
name = "articlewriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "fastapi[standard]>=0.115.11",
    "playwright>=1.50.0",
    "pydantic-ai>=0.8.0",
    "tavily-python>=0.7.10",
    "tiktoken>=0.9.0",
    "pydantic>=2.10.6",
]
