[project]
name = "articlewriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.4",
    "fastapi[standard]>=0.115.11",
    "playwright>=1.50.0",
    "pydantic-ai>=0.8.0",
    "tavily-python>=0.7.10",
    "tiktoken>=0.9.0",
    "pydantic>=2.10.6",
    "trafilatura>=2.0.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "logfire[fastapi]>=1.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3.5",
    "alembic>=1.14",
    "pyjwt[crypto]>=2.10",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.12",
    "testcontainers[postgres]>=4.9",
    "vulture>=2.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "requires_docker: tests that need a running Docker daemon (testcontainers).",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", "docs", "migrations/versions"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names)
    "I",      # isort (import sorting)
    "B",      # flake8-bugbear (likely bugs)
    "UP",     # pyupgrade (modern Python idioms)
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles it)
    "B008",   # function call in default arg (FastAPI Depends pattern)
    "SIM108", # ternary instead of if-else (often less readable)
    "RUF001", # ambiguous unicode in strings (false positive for Polish)
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # asserts in tests are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
